[package]
name = "sdl"
version = "0.3.7"
authors = [
	"Brian Anderson <banderson@mozilla.com>",
	"Kang Seonghoon <public+rust@mearie.org>",
	"Simon Marache-Francisco <rust@simon.marache.net>"
]

description = "SDL bindings"
homepage = "https://github.com/brson/rust-sdl"
repository = "https://github.com/brson/rust-sdl"
license = "MIT"

[lib]
name = "sdl"
path = "src/sdl/lib.rs"

[dependencies]
num = "0.2.1"
rand = "0.7.3"
